Fix processor diagnostics and build hygiene